insert well-known path before the issuer URL path for OAuth2